crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__apply_with_operator.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: "parse(\"let x = 5\")"
---
NodeRoot@0..9
  NodeApply@0..9
    NodeApplyArgument@0..6
      NodeApply@0..6
        NodeApplyReceiver@0..4
          Identifier@0..3 "let"
          Space@3..4 " "
        NodeApplyArgument@4..6
          Identifier@4..5 "x"
          Space@5..6 " "
    NodeApplyReceiver@6..7
      Equal@6..7 "="
    Space@7..8 " "
    NodeApplyArgument@8..9
      NodeLiteral@8..9
        NodeLiteralValue@8..9
          Integer@8..9 "5"
