crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__apply_with_parens.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: "parse(\"f (fn x y z)\")"
---
NodeRoot@0..12
  NodeApply@0..12
    NodeApplyReceiver@0..2
      Identifier@0..1 "f"
      Space@1..2 " "
    NodeApplyArgument@2..12
      NodeApply@2..11
        NodeApplyReceiver@2..10
          NodeApply@2..10
            NodeApplyReceiver@2..8
              NodeApply@2..8
                NodeApplyReceiver@2..6
                  LParen@2..3 "("
                  Identifier@3..5 "fn"
                  Space@5..6 " "
                NodeApplyArgument@6..8
                  Identifier@6..7 "x"
                  Space@7..8 " "
            NodeApplyArgument@8..10
              Identifier@8..9 "y"
              Space@9..10 " "
        NodeApplyArgument@10..11
          Identifier@10..11 "z"
      RParen@11..12 ")"
