crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__attr_with_identifier.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: "parse(\"@alias s\")"
---
NodeRoot@0..8
  NodeAttr@0..8
    At@0..1 "@"
    NodeApply@1..8
      NodeApplyReceiver@1..7
        Identifier@1..6 "alias"
        Space@6..7 " "
      NodeApplyArgument@7..8
        Identifier@7..8 "s"
