crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__attr_with_literal.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: "parse(\"version 1\")"
---
NodeRoot@0..9
  NodeApply@0..9
    NodeApplyReceiver@0..8
      Identifier@0..7 "version"
      Space@7..8 " "
    NodeApplyArgument@8..9
      NodeLiteral@8..9
        NodeLiteralValue@8..9
          Integer@8..9 "1"
