crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__block.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: "parse(\"let x = # comment here\\n  let foo = 2\\n  let bar = 3\\n  foo + bar\")"
---
NodeRoot@0..62
  NodeApply@0..62
    NodeApplyArgument@0..6
      NodeApply@0..6
        NodeApplyReceiver@0..4
          Identifier@0..3 "let"
          Space@3..4 " "
        NodeApplyArgument@4..6
          Identifier@4..5 "x"
          Space@5..6 " "
    NodeApplyReceiver@6..7
      Equal@6..7 "="
    Space@7..8 " "
    CommentStart@8..9 "#"
    CommentContent@9..22 " comment here"
    Newline@22..23 "\n"
    Space@23..25 "  "
    NodeApplyArgument@25..62
      NodeApply@25..62
        NodeApplyReceiver@25..53
          NodeApply@25..53
            NodeApplyArgument@25..47
              NodeApply@25..47
                NodeApplyReceiver@25..43
                  NodeApply@25..43
                    NodeApplyReceiver@25..39
                      NodeApply@25..39
                        NodeApplyArgument@25..33
                          NodeApply@25..33
                            NodeApplyReceiver@25..29
                              Identifier@25..28 "let"
                              Space@28..29 " "
                            NodeApplyArgument@29..33
                              Identifier@29..32 "foo"
                              Space@32..33 " "
                        NodeApplyReceiver@33..34
                          Equal@33..34 "="
                        Space@34..35 " "
                        NodeApplyArgument@35..39
                          NodeLiteral@35..36
                            NodeLiteralValue@35..36
                              Integer@35..36 "2"
                          Newline@36..37 "\n"
                          Space@37..39 "  "
                    NodeApplyArgument@39..43
                      Identifier@39..42 "let"
                      Space@42..43 " "
                NodeApplyArgument@43..47
                  Identifier@43..46 "bar"
                  Space@46..47 " "
            NodeApplyReceiver@47..48
              Equal@47..48 "="
            Space@48..49 " "
            NodeApplyArgument@49..53
              NodeLiteral@49..50
                NodeLiteralValue@49..50
                  Integer@49..50 "3"
              Newline@50..51 "\n"
              Space@51..53 "  "
        NodeApplyArgument@53..62
          NodeApply@53..62
            NodeApplyArgument@53..57
              Identifier@53..56 "foo"
              Space@56..57 " "
            NodeApplyReceiver@57..58
              Plus@57..58 "+"
            Space@58..59 " "
            NodeApplyArgument@59..62
              Identifier@59..62 "bar"
