crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__example_ap-op-add.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: foo 1 + 2
---
NodeRoot@0..9
  NodeApply@0..9
    NodeApplyReceiver@0..4
      Identifier@0..3 "foo"
      Space@3..4 " "
    NodeApplyArgument@4..9
      NodeApply@4..9
        NodeApplyArgument@4..6
          NodeLiteral@4..5
            NodeLiteralValue@4..5
              Integer@4..5 "1"
          Space@5..6 " "
        NodeApplyReceiver@6..7
          Plus@6..7 "+"
        Space@7..8 " "
        NodeApplyArgument@8..9
          NodeLiteral@8..9
            NodeLiteralValue@8..9
              Integer@8..9 "2"
