crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__example_ap-op-or.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: foo a || b
---
NodeRoot@0..10
  NodeApply@0..10
    NodeApplyReceiver@0..4
      Identifier@0..3 "foo"
      Space@3..4 " "
    NodeApplyArgument@4..10
      NodeApply@4..10
        NodeApplyArgument@4..6
          Identifier@4..5 "a"
          Space@5..6 " "
        NodeApplyReceiver@6..8
          PipePipe@6..8 "||"
        Space@8..9 " "
        NodeApplyArgument@9..10
          Identifier@9..10 "b"
